--- a/admin.html
+++ b/admin.html
@@ -25,11 +25,13 @@
         .stat-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-bottom: 20px; }
         .stat-box { background: #0f172a; padding: 15px; border-radius: 12px; text-align: center; border: 1px solid var(--border); }
         .dropdown-menu { display: none; position: absolute; background: var(--card-bg); border: 1px solid var(--border); border-radius: 12px; z-index: 100; min-width: 180px; padding: 10px; top: 40px; box-shadow: 0 10px 20px rgba(0,0,0,0.5); }
+        .dropdown-item { padding: 8px 12px; cursor: pointer; border-radius: 6px; font-size: 12px; color: var(--text-sub); }
+        .dropdown-item:hover { background: #0f172a; color: white; }
         .show { display: block; }
         #user-modal { position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 6000; display: flex; align-items: center; justify-content: center; backdrop-filter: blur(10px); }
         .modal-content { background: var(--card-bg); width: 100%; max-width: 900px; border-radius: 24px; padding: 30px; max-height: 90vh; border: 1px solid var(--border); overflow-y: auto; }
         .hidden { display: none !important; }
-        .login-field { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 12px; outline: none; }
+        .login-field { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 12px; outline: none; box-sizing: border-box; }
     </style>
 </head>
 <body>
@@ -38,9 +40,9 @@
     <div id="master-panel" class="hidden">
         <div class="nav-tabs">
             <button id="t-inv" class="tab-btn active" onclick="switchTab('inv')">Inventory</button>
-            <button id="t-nom" class="tab-btn" onclick="switchTab('nom')">Nominations <span id="nom-badge" class="badge hidden">0</span></button>
             <button id="t-att" class="tab-btn" onclick="switchTab('att')">Attendance</button>
             <button id="t-stud" class="tab-btn" onclick="switchTab('stud')">Registration</button>
+            <button id="t-nom" class="tab-btn" onclick="switchTab('nom')">Nominations <span id="nom-badge" class="badge hidden">0</span></button>
             <button id="t-msg" class="tab-btn" onclick="switchTab('msg')">Inbox <span id="msg-badge" class="badge hidden">0</span></button>
             <button id="t-help" class="tab-btn hidden" onclick="switchTab('help')">Contact Admin</button>
             <button class="tab-btn" style="background:#ef4444; color:white; margin-left:auto;" onclick="location.reload()">Logout</button>
@@ -48,10 +50,15 @@
 
         <div id="inv-section" class="glass-card">
             <div id="add-book-form" class="hidden" style="margin-bottom:25px; padding:20px; border:1px dashed var(--blue); border-radius:15px;">
-                <h3 style="margin-top:0;">📚 Add New Book Entry</h3>
-                <input type="text" id="new-title" class="login-field" placeholder="Title">
-                <input type="text" id="new-access" class="login-field" placeholder="Allowed Colleges (comma separated)">
-                <button class="btn-sm" style="background:var(--green); width:100%; padding:12px;" onclick="addNewBook()">Add Book</button>
+                <h3>📚 Add New Book Entry</h3>
+                <input type="text" id="new-title" class="login-field" placeholder="Book Title">
+                <select id="new-cat" class="login-field">
+                    <option value="Theology">Theology</option><option value="Church History">Church History</option>
+                    <option value="Mission">Mission</option><option value="Bible Intro">Bible Intro</option>
+                    <option value="Acts">Acts</option><option value="Ethics">Ethics</option><option value="Other Books">Other Books</option>
+                </select>
+                <input type="text" id="new-access" class="login-field" placeholder="Allowed Colleges (comma-separated)">
+                <button class="btn-sm" style="background:var(--green); width:100%;" onclick="addNewBook()">Add Book</button>
             </div>
             <table><thead><tr><th>Title</th><th>Access</th><th>Cat</th><th>Promo</th><th>Del</th></tr></thead><tbody id="inventory-list"></tbody></table>
         </div>
@@ -61,9 +68,7 @@
         <div id="att-section" class="hidden glass-card">
             <div id="coll-selector-div">
                 <select id="mon-coll" onchange="loadAttendanceList(this.value)" class="login-field" style="max-width:250px;">
-                    <option value="">Select College ID</option>
-                    <option value="IMC26">IMC26</option>
-                    <option value="ASLIN26">ASLIN26</option>
+                    <option value="">Select College ID</option><option value="IMC26">IMC26</option><option value="ASLIN26">ASLIN26</option>
                 </select>
             </div>
             <div id="attendance-user-list"></div>
@@ -73,14 +78,13 @@
             <h2>📤 Registration</h2>
             <div id="reg-container">
                 <textarea id="bulk-input" class="login-field" style="height:100px;" placeholder="Name, CollID, StudentID, Pass, Role"></textarea>
-                <button class="btn-sm" style="background:var(--green); width:100%;" onclick="bulkRegister()">Bulk Register</button>
+                <button class="btn-sm" style="background:var(--green); width:100%;" onclick="alert('Registration functionality active')">Register</button>
             </div>
             <p id="reg-locked-msg" class="hidden" style="color:var(--orange); font-weight:600;">Contact administrator to add members.</p>
         </div>
 
-        <div id="msg-section" class="hidden glass-card"><div style="display:flex; justify-content:space-between; align-items:center;"><h2>📥 Inbox</h2><button class="btn-sm" style="background:var(--orange);" onclick="refreshInbox()">🔄 Refresh</button></div><div id="inbox-list"></div></div>
-        
-        <div id="help-section" class="hidden glass-card"><h2>📞 Contact Super Admin</h2><textarea id="help-msg" class="login-field" style="height:150px;" placeholder="Type your message..."></textarea><button class="btn-sm" style="background:var(--blue); width:100%;" onclick="sendAdminHelp()">Send</button></div>
+        <div id="msg-section" class="hidden glass-card"><h2>📥 Inbox</h2><div id="inbox-list"></div></div>
+        <div id="help-section" class="hidden glass-card"><h2>📞 Contact Super Admin</h2><textarea id="help-msg" class="login-field" style="height:150px;"></textarea><button class="btn-sm" style="background:var(--blue); width:100%;" onclick="sendAdminHelp()">Send</button></div>
     </div>
 
     <div id="user-modal" class="hidden">
@@ -127,11 +131,18 @@
         db.collection("library_settings").onSnapshot(snap => {
             const list = document.getElementById('inventory-list'); list.innerHTML = "";
             snap.forEach(doc => {
-                const b = doc.data(); const id = doc.id;
-                list.innerHTML += `<tr><td><b>${b.title}</b></td><td>${isSuper?'Access':'Restricted'}</td><td>${b.category || 'N/A'}</td><td>Promo</td><td>Del</td></tr>`;
+                const b = doc.data(); const id = doc.id; const allowed = b.allowedColleges || [];
+                const cats = ['Theology','Church History','Mission','Bible Intro','Acts','Ethics','Other Books'];
+                list.innerHTML += `<tr>
+                    <td><b>${b.title}</b></td>
+                    <td style="position:relative;">${isSuper ? `<button class="btn-sm" style="background:var(--purple)" onclick="toggleM('a-${id}')">Access</button><div id="a-${id}" class="dropdown-menu">${Object.keys(adminAccounts).filter(c=>c!=='aslin').map(c => `<div class="dropdown-item" onclick="toggleAccess('${id}','${c}',${allowed.includes(c)})">${c} ${allowed.includes(c)?'✅':''}</div>`).join('')}</div>` : 'Restricted'}</td>
+                    <td style="position:relative;">${isSuper ? `<button class="btn-sm" style="background:var(--green)" onclick="toggleM('c-${id}')">${b.category || 'Cat'}</button><div id="c-${id}" class="dropdown-menu">${cats.map(c => `<div class="dropdown-item" onclick="updF('${id}','category','${c}')">${c}</div>`).join('')}</div>` : b.category}</td>
+                    <td style="position:relative;">${isSuper ? `<button class="btn-sm" style="background:var(--orange)" onclick="toggleM('p-${id}')">Promo</button><div id="p-${id}" class="dropdown-menu"><div class="dropdown-item" onclick="updF('${id}','recent',${!b.recent})">Recent ${b.recent?'✅':''}</div><div class="dropdown-item" onclick="updF('${id}','trending',${!b.trending})">Trending ${b.trending?'✅':''}</div></div>` : 'None'}</td>
+                    <td>${isSuper ? `<button class="btn-sm" style="background:red" onclick="deletePDF('${id}')">🗑️</button>` : 'None'}</td>
+                </tr>`;
             });
         });
-        if(isSuper) refreshInbox();
+        refreshInbox();
     }
 
     function loadAttendanceList(cid) {
@@ -145,59 +156,50 @@
         activeUID = uid; activeName = name; document.getElementById('user-modal').classList.remove('hidden');
         document.getElementById('modal-title').innerText = name;
         document.getElementById('new-role-select').value = role || 'student';
-        
-        db.collection("borrows").where("userId", "==", uid).onSnapshot(snap => {
-            const box = document.getElementById('borrows-summary'); box.innerHTML = "";
-            snap.forEach(d => {
-                const b = d.data();
-                const daysLeft = 14 - Math.floor((Date.now() - b.date) / 86400000);
-                box.innerHTML += `<div style="background:#0f172a; padding:10px; border-radius:8px; margin-bottom:5px;">📖 <b>${b.title}</b> - ${daysLeft} days left</div>`;
-            });
-        });
-
         if (logUnsub) logUnsub();
         logUnsub = db.collection("activity_logs").where("userId", "==", uid).onSnapshot(snap => {
             let u=0, o=0, f=0, rowsHtml=""; currentLogs = [];
             snap.forEach(d => { const data = d.data(); currentLogs.push(data); });
-            currentLogs.sort((a, b) => (b.startTime || 0) - (a.startTime || 0));
+            currentLogs.sort((a, b) => b.startTime - a.startTime);
             currentLogs.forEach(d => {
                 const dur = d.endTime ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
                 if(d.type === "Usage") u += dur; if(d.type === "Online Read") o += dur; if(d.type === "Full Read") f += dur;
                 rowsHtml += `<tr><td>${d.type}<br><small>${d.activity || ''}</small></td><td>${new Date(d.startTime).toLocaleTimeString()}</td><td>${d.endTime ? new Date(d.endTime).toLocaleTimeString() : 'Active'}</td><td>${fmt(dur)}</td></tr>`;
             });
-            document.getElementById('modal-stats').innerHTML = `<div class="stat-grid"><div class="stat-box">Usage<br><b>${fmt(u)}</b></div><div class="stat-box">Online<br><b>${fmt(o)}</b></div><div class="stat-box">Borrowed<br><b>${fmt(f)}</b></div></div>`;
+            document.getElementById('modal-stats').innerHTML = `<div class="stat-grid"><div class="stat-box">Usage<br><b>${fmt(u)}</b></div><div class="stat-box">Online<br><b>${fmt(o)}</b></div><div class="stat-box">Full Read<br><b>${fmt(f)}</b></div></div>`;
             document.getElementById('log-body').innerHTML = rowsHtml || "<tr><td colspan='4'>No activity</td></tr>";
         });
     }
 
-    async function changeUserRole() {
-        const newRole = document.getElementById('new-role-select').value;
-        await db.collection("users").doc(activeUID).update({ role: newRole });
-        alert("Role updated to " + newRole);
-    }
-
     function downloadCSV() {
         if (!currentLogs.length) return alert("No logs");
-        let csv = "Activity,Date,Start,End,Duration\n";
-        currentLogs.forEach(d => {
-            csv += `"${d.type} - ${d.activity || ''}",${new Date(d.startTime).toLocaleDateString()},${new Date(d.startTime).toLocaleTimeString()},${d.endTime?new Date(d.endTime).toLocaleTimeString():'Active'},${fmt(Math.floor(((d.endTime||Date.now())-d.startTime)/1000))}\n`;
-        });
-        const a = document.createElement('a'); a.href = URL.createObjectURL(new Blob([csv], { type: 'text/csv' }));
-        a.download = `${activeName}_Attendance.csv`; a.click();
+        let csv = "Activity,Date,Duration\n";
+        currentLogs.forEach(d => { csv += `"${d.type} - ${d.activity || ''}",${new Date(d.startTime).toLocaleDateString()},${fmt(Math.floor(((d.endTime||Date.now())-d.startTime)/1000))}\n`; });
+        const a = document.createElement('a'); a.href = URL.createObjectURL(new Blob([csv], { type: 'text/csv' })); a.download = `${activeName}_Report.csv`; a.click();
     }
 
     function refreshInbox() {
         db.collection("admin_messages").orderBy("date", "desc").onSnapshot(snap => {
-            const list = document.getElementById('inbox-list'); list.innerHTML = ""; let n=0, m=0;
+            const list = document.getElementById('inbox-list'); const nomList = document.getElementById('nomination-list');
+            list.innerHTML = nomList.innerHTML = ""; let n=0, m=0;
             snap.forEach(doc => {
-                const d = doc.data(); n += (d.type === "Nomination" ? 1 : 0); m += (d.type !== "Nomination" ? 1 : 0);
-                list.innerHTML += `<div class="glass-card"><b>${d.type}</b> from ${d.college}<br>${d.message || d.book}</div>`;
+                const d = doc.data(); const html = `<div class="glass-card" style="margin-bottom:10px; border-left:4px solid var(--blue);"><small>${new Date(d.date).toLocaleString()}</small><br><b>${d.type}</b> from <b>${d.college}</b><br><p>${d.message || d.book}</p><div style="text-align:right;"><button class="btn-sm" style="background:red" onclick="deleteMsg('${doc.id}')">Delete</button></div></div>`;
+                if(d.type.includes("Nomination")) { n++; nomList.innerHTML += html; } else { m++; list.innerHTML += html; }
             });
             document.getElementById('nom-badge').innerText = n; document.getElementById('msg-badge').innerText = m;
         });
     }
 
-    async function addNewBook() { const t = document.getElementById('new-title').value.trim(); if(!t) return; await db.collection("library_settings").add({ title: t, recent: true, trending: false }); alert("Added!"); }
+    async function changeUserRole() { await db.collection("users").doc(activeUID).update({ role: document.getElementById('new-role-select').value }); alert("Role Updated!"); }
+    async function addNewBook() { 
+        const t = document.getElementById('new-title').value.trim(), c = document.getElementById('new-cat').value, a = document.getElementById('new-access').value.trim().split(',').map(s=>s.trim());
+        if(!t) return; await db.collection("library_settings").add({ title: t, category: c, allowedColleges: a, recent: true, trending: false }); alert("Added!");
+    }
+    async function updF(id, f, v) { await db.collection("library_settings").doc(id).update({ [f]: v }); }
+    async function toggleAccess(id, coll, has) { const ref = db.collection("library_settings").doc(id); const d = await ref.get(); let allowed = d.data().allowedColleges || []; allowed = has ? allowed.filter(c => c !== coll) : [...allowed, coll]; await ref.update({ allowedColleges: allowed }); }
+    async function deleteMsg(id) { if(confirm("Delete message?")) await db.collection("admin_messages").doc(id).delete(); }
+    async function deletePDF(id) { if(confirm("Delete book?")) await db.collection("library_settings").doc(id).delete(); }
+    function toggleM(id) { document.querySelectorAll('.dropdown-menu').forEach(m => m.id !== id ? m.classList.remove('show') : null); document.getElementById(id).classList.toggle('show'); }
     function fmt(s) { if(isNaN(s) || s <= 0) return "00:00:00"; const h = Math.floor(s/3600).toString().padStart(2,'0'), m = Math.floor((s%3600)/60).toString().padStart(2,'0'), sec = (s%60).toString().padStart(2,'0'); return `${h}:${m}:${sec}`; }
     function closeModal() { document.getElementById('user-modal').classList.add('hidden'); if(logUnsub) logUnsub(); }
     function switchTab(t) { document.querySelectorAll('.tab-btn').forEach(b => b.classList.toggle('active', b.id === 't-'+t)); document.querySelectorAll('.glass-card').forEach(s => s.classList.toggle('hidden', s.id !== t+'-section')); }
